fix_export